--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>de.segoy.springframework</groupId>
         <artifactId>segoy-pet-clinic</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <artifactId>pet-clinic-data</artifactId>
