--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>de.segoy.springframework</groupId>
     <artifactId>segoy-pet-clinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>segoy-pet-clinic</name>
     <description>segoy-pet-clinic</description>
@@ -50,7 +50,7 @@
 
     <scm>
         <developerConnection>scm:git:https://github.com/Segoy1/segoy-pet-clinic.git</developerConnection>
-        <tag>segoy-pet-clinic-0.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
 </project>
