--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
                 <version>3.0.1</version>
                 <configuration>
                     <goals>install</goals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
             </plugin>
         </plugins>
